--- a/cmd/dog/initassets/dog.yml
+++ b/cmd/dog/initassets/dog.yml
@@ -8,6 +8,10 @@ cond: "2/30s"
 kill: "INT,KILL"
 # 记录日志信息，多个逗号分隔，eg. ENV,CWD
 log: "ENV,CWD"
+# 允许最大启动时长 (默认 0，不检查启动时长)
+maxtime: 0
+# 允许最大启动时长包含的环境变量
+maxtimeenv: SHORT_TASK_FOR_DOG
 # 允许最大内存 (默认 0B，不检查内存)
 maxmem: 0
 # 允许内存最大百分比, eg 0-1200 (默认 300), 0 不查 CPU
