--- a/cmd/dog/initassets/dog.yml
+++ b/cmd/dog/initassets/dog.yml
@@ -1,38 +1,38 @@
 ---
 
 # 命令包含，以!开头为不包含，可以多个值
-filter: [ ]
+Filter: [ ]
 # 发送条件，默认触发1次就发信号，eg. 3/30s，在30s内发生3次，则触发
-cond: "2/30s"
+Cond: "2/30s"
 #  发送信号，eg. INT,TERM,KILL,QUIT,USR1,USR2 (默认 INT)
-kill: "INT,KILL"
+Kill: "INT,KILL"
 # 记录日志信息，多个逗号分隔，eg. ENV,CWD
-log: "ENV,CWD"
+Log: "ENV,CWD"
 # 允许最大启动时长 (默认 0，不检查启动时长)
-maxtime: 0
+MaxTime: 0
 # 允许最大启动时长包含的环境变量
-maxtimeenv: SHORT_TASK_FOR_DOG
+MaxTimeEnv: SHORT_TASK_FOR_DOG
 # 允许最大内存 (默认 0B，不检查内存)
-maxmem: "8GiB"
+MaxMem: "8GiB"
 # 允许内存最大百分比, eg 0-1200 (默认 300), 0 不查 CPU
-maxpcpu: 300
+MaxPcpu: 300
 # 允许CPU最大百分比, eg 1-100 (默认 50)
-maxpmem: 50
+MaxPmem: 50
 # 允许最小总可用内存 (默认 0B，不检查此项)
-minavailablememory: "1GiB"
+MinAvailableMemory: "1GiB"
 # 允许最大机器CPU百分比（0-100） (默认 0，不检查此项)
-maxhostcpu: 90
+MaxHostCpu: 90
 # 总最小内存触发时，驱逐进程命令行包含白名单，可以多个值
-whites: [ ]
+Whites: [ ]
 # 指定pid
-pid: 0
+Pid: 0
 # 指定ppid
-ppid: 0
+Ppid: 0
 # 是否监控自身
-self: false
+Self: false
 # 检查时间间隔 (默认 10s)
-span: 10s
+Span: 10s
 # 最大抖动 (默认 1s)
-jitter: 1s
+Jitter: 1s
 # 只取前N个检查
-topn: 0
+Topn: 0
